--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -32,6 +32,6 @@ jobs:
         git config --global user.email 'github-actions@github.com'
         git add README.md
         git commit -m '자동 업데이트: 폴더 구조'
-        git push
+        git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
