--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -30,5 +30,9 @@ jobs:
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git add README.md
-        git commit -m '자동 업데이트: 폴더 구조'
-        git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+        if git diff-index --quiet HEAD; then
+          echo "No changes to commit"
+        else
+          git commit -m '자동 업데이트: 폴더 구조'
+          git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+        fi
