프로젝트: 이미지 최적화 & 업로드

--- a/.github/workflows/optimize-and-upload.yml
+++ b/.github/workflows/optimize-and-upload.yml
@@ -40,8 +40,9 @@ jobs:
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git stash --include-untracked
-        git pull --rebase
+        git pull --rebase || true
+        git reset --hard HEAD
         git stash pop
         git add -A
-        git commit -m "자동 업데이트: 이미지 파일을 최적화하고 업로드"
+        git commit -m "자동 업데이트: 이미지 파일을 최적화하고 업로드" || true
         git push
