--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -38,8 +38,8 @@ jobs:
     - name: Commit and push changes
       run: |
         cd deploy-study
-        git config --local user.email "you@example.com"
-        git config --local user.name "Your Name"
+        git config --local user.email "phosphos21@gmail.com"
+        git config --local user.name "choyeun"
         git add docs/
         git commit -m "Sync markdown files with source repository"
         git push origin main
